--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-Setup by aragaming
+<!DOCTYPE html>
+<html>
+ 
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <title>Login | FIPTECHVPN SSH SSL</title>
+    <!-- Favicon-->
+    <link rel="icon" href="//fiptechvpn.com/assets/favicon.ico" type="image/x-icon">
+ 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+ 
+    <!-- Bootstrap Core Css -->
+    <link href="//fiptechvpn.com/assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
+ 
+    <!-- Waves Effect Css -->
+    <link href="//fiptechcpn.com/assets/plugins/node-waves/waves.css" rel="stylesheet" />
+ 
+    <!-- Animation Css -->
+    <link href="//fiptechvpn.com/assets/plugins/animate-css/animate.css" rel="stylesheet" />
+ 
+    <!-- Custom Css -->
+    <link href="//fiptechvpn.com/assets/css/style.css" rel="stylesheet">
+</head>
+<script data-ad-client="ca-pub-6724474260137039" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+ 
+<body class="login-page">
+    <div class="login-box">
+        <div class="logo">
+            <a href="javascript:void(0);">FIPTECHVPN SSH SSL</a>
+        </div>
+        <div class="card">
+            <div class="body">
+                <form id="sign_in" method="POST">
+                    <div class="msg">Login to your account.</div>
+ 
+ 
+                    <input type="hidden" name="_token" value="p7K52SWlvlEzFaajdOHfmQzUjkmKFwfQ1HxXfUWI">
+ 
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <i class="material-icons">email</i>
+                        </span>
+                        <div class="form-line">
+                            <input type="email" class="form-control" name="email" placeholder="Email Adress" required autofocus>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <i class="material-icons">lock</i>
+                        </span>
+                        <div class="form-line">
+                            <input type="password" class="form-control" name="password" placeholder="Password" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button class="btn btn-block bg-pink waves-effect" type="submit" style="width: 100% !important;">SIGN IN</button>
+                        </div>
+ 
+                        <p class="text-center">or</p>
+                        <div class="col-xs-12">
+                            <a class="btn btn-block bg-blue waves-effect" href="myvps.sshviral.com/register">REGISTER</a>
+                        </div>
+ 
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+ 
+    <!-- Jquery Core Js -->
+    <script src="//fiptechvpn.com/assets/plugins/jquery/jquery.min.js"></script>
+ 
+    <!-- Bootstrap Core Js -->
+    <script src="//fiptechvpn.com/assets/plugins/bootstrap/js/bootstrap.js"></script>
+ 
+    <!-- Waves Effect Plugin Js -->
+    <script src="//fiptechvpn.com/assets/plugins/node-waves/waves.js"></script>
+ 
+    <!-- Validation Plugin Js -->
+    <script src="//fiptechvpn.com/assets/plugins/jquery-validation/jquery.validate.js"></script>
+ 
+    <!-- Custom Js -->
+    <script src="//fiptechvpn.com/assets/js/admin.js"></script>
+    <script src="//fiptechvpn.com/assets/js/pages/examples/sign-in.js"></script>
+</body>
+ 
+</html>
