--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
  
                         <p class="text-center">or</p>
                         <div class="col-xs-12">
-                            <a class="btn btn-block bg-blue waves-effect" href="myvps.sshviral.com/register">REGISTER</a>
+                            <a class="btn btn-block bg-blue waves-effect" href="/register.html">REGISTER</a>
                         </div>
  
                     </div>
