--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Login | FIPTECHVPN SSH SSL</title>
+    <title>Login | MYVPS VIRAL SSH SSL</title>
     <!-- Favicon-->
     <link rel="icon" href="//fiptechvpn.com/assets/favicon.ico" type="image/x-icon">
  
@@ -16,7 +16,7 @@
     <link href="//fiptechvpn.com/assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
  
     <!-- Waves Effect Css -->
-    <link href="//fiptechcpn.com/assets/plugins/node-waves/waves.css" rel="stylesheet" />
+    <link href="//fiptechvpn.com/assets/plugins/node-waves/waves.css" rel="stylesheet" />
  
     <!-- Animation Css -->
     <link href="//fiptechvpn.com/assets/plugins/animate-css/animate.css" rel="stylesheet" />
