--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
 <body class="login-page">
     <div class="login-box">
         <div class="logo">
-            <a href="javascript:void(0);">FIPTECHVPN SSH SSL</a>
+            <a href="javascript:void(0);">MYVPS VIRAL SSH SSL</a>
         </div>
         <div class="card">
             <div class="body">
@@ -72,7 +72,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <button class="btn btn-block bg-pink waves-effect" type="submit" style="width: 100% !important;">REGISTER</button>
+                            <button class="btn btn-block bg-pink waves-effect" onClick="alert(s)" type="submit" style="width: 100% !important;" href="/index.html">REGISTER</button>
                         </div>
                     </div>
  
@@ -99,5 +99,14 @@
     <script src="//fiptechvpn.com/assets/js/admin.js"></script>
     <script src="//fiptechvpn.com/assets/js/pages/examples/sign-in.js"></script>
 </body>
+
+
+
+
+
+<script>
+var s ="Register Success";
+alert(s);
+</script>
  
 </html>
