--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Register | FIPTECHVPN SSH SSL</title>
+    <title>Register | MYVPS VIRAL SSH SSL</title>
     <!-- Favicon-->
     <link rel="icon" href="//fiptechvpn.com/assets/favicon.ico" type="image/x-icon">
  
@@ -72,7 +72,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <button class="btn btn-block bg-pink waves-effect" onClick="alert(s)" type="submit" style="width: 100% !important;" href="/index.html">REGISTER</button>
+                            <button class="btn btn-block bg-pink waves-effect" type="submit" style="width: 100% !important;">REGISTER</button>
                         </div>
                     </div>
  
@@ -99,14 +99,5 @@
     <script src="//fiptechvpn.com/assets/js/admin.js"></script>
     <script src="//fiptechvpn.com/assets/js/pages/examples/sign-in.js"></script>
 </body>
-
-
-
-
-
-<script>
-var s ="Register Success";
-alert(s);
-</script>
  
 </html>
