--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="//fiptechvpn.com/assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
  
     <!-- Waves Effect Css -->
-    <link href="//fiptechvpn.com/assets/plugins/node-waves/waves.css" rel="stylesheet" />
+    <link href="//fiptechcpn.com/assets/plugins/node-waves/waves.css" rel="stylesheet" />
  
     <!-- Animation Css -->
     <link href="//fiptechvpn.com/assets/plugins/animate-css/animate.css" rel="stylesheet" />
@@ -29,7 +29,7 @@
 <body class="login-page">
     <div class="login-box">
         <div class="logo">
-            <a href="javascript:void(0);">FIPTECHVPN SSH SSL</a>
+            <a href="javascript:void(0);">MYVPS VIRAL SSH SSL</a>
         </div>
         <div class="card">
             <div class="body">
@@ -81,11 +81,11 @@
     <script src="//fiptechvpn.com/assets/plugins/node-waves/waves.js"></script>
  
     <!-- Validation Plugin Js -->
-    <script src="//fiptechvpn.com/assets/plugins/jquery-validation/jquery.validate.js"></script>
+    <script src="/assets/js/jquery.validate.js"></script>
  
     <!-- Custom Js -->
-    <script src="//fiptechvpn.com/assets/js/admin.js"></script>
-    <script src="//fiptechvpn.com/assets/js/pages/examples/sign-in.js"></script>
+    <script src="/assets/js/admin.js"></script>
+    <script src="/assets/js/sign-in.js"></script>
 </body>
  
 </html>
